--- a/views/partials/main/navbar.handlebars
+++ b/views/partials/main/navbar.handlebars
@@ -6,26 +6,24 @@
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="/">Home</a>
-      </li>
-      {{#if (not authenticated)}}
-      <li class="nav-item">
-        <a class="nav-link" href="/login">Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/signup">Signup</a>
-      </li>
-      {{else}}
-       <li class="nav-item">
-        <a class="nav-link" href="/request">Request</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/logout">Logout</a>
-      </li>
-      {{/if}}
-    </ul>
-  </div>
+  <ul class="navbar-nav collapse navbar-collapse">
+    <li class="nav-item">
+      <a class="nav-link" href="/">Home</a>
+    </li>
+    {{#if (not authenticated)}}
+    <li class="nav-item">
+      <a class="nav-link" href="/login">Login</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/signup">Signup</a>
+    </li>
+    {{else}}
+    <li class="nav-item">
+      <a class="nav-link" href="/request">Request</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/logout">Logout</a>
+    </li>
+    {{/if}}
+  </ul>
 </nav>
